--- a/resources/portuguese.yml
+++ b/resources/portuguese.yml
@@ -4,7 +4,12 @@ Bidding:
   overMax:  "Não pode oferecer mais que %,d neste momento"
   underMin: "Tem que oferecer no minimo %,d"
   outBid: "O jogador %s ofereceu mais!"
-  consoleCantBid: "Desculpe, apenas jogadores podem licitar por items"
   notRunning: "Não esta nenhum leilão a correr"
   cooldown: "O leilão está em cooldown, porfavor espere %d"
   playerWinning: "Já és o jogador com a oferta mais alta"
+Auction:
+  alreadyStarted: ""
+Console:
+  cantStartAuction: ""
+  cantBid: "Desculpe, apenas jogadores podem licitar por items"
+  
