Changes to portugues locale and config

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,5 +1,11 @@
 Main:
-  locale: english
+  defaultLocale: english
+  availableLocale:
+  - english
+  - portuguese
+  - spanish
+  - italian
+  - vietnamese
   
 Auction:
   allowCreative: false
