--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -7,3 +7,6 @@ website: http://invisioncraft.net
 
 main: net.invisioncraft.plugins.salesmania.Salesmania
 softdepend: [Vault]
+commands:
+  auction:
+    description: Salesmania auction
