Fixed some permission stuff and logic for AuctionCancel (derp)

--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -32,4 +32,6 @@ commands:
       default: op
       children:
         salesmania.admin.reload: true
+        salesmania.auction.cancel: true
+        salesmania.auction.end: true
     
