--- a/resources/english.yml
+++ b/resources/english.yml
@@ -36,7 +36,7 @@ Auction:
   bidRaised: "§aBid raised to §2$%,.2f§a by §3%s"
   canceled: "§cAuction canceled."
   startOverMax: "§cThe starting bid can't be over $%,.2f"
-  startUnderMin: "§cThe starting bid must be over $%,.2f"
+  startUnderMin: "§cThe starting bid must be atleast $%,.2f"
   timeRemaining: "%d seconds remaining."
   notRunning: "§cThere is no auction running"
   noBids: "§cAuction ended with no bids."
