Config saved on unload

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -9,6 +9,7 @@ Permission:
     
 Misc:
   reloadConfig: "Reloaded configuration file: %s"
+  saveConfig: "Saved configuration file: %s"
 
 Locale:
   available: "Available locales: %s"
