--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -14,26 +14,29 @@ commands:
   salesmania:
     description: Salesmania
     permission: salesmania.admin
-  permissions:
-    salesmania.*:
-      description: Access to all salesmania commands
-      default: op
-      children:
-        salesmania.auction.*: true
-        salesmania.admin: true
-        
-    salesmania.auction.*:
-      description: Access to all salesmania auction commands
-      default: op
-      children:
-        salesmania.auction.start: true
-    salesmania.admin.*:
-      description: Provides access salesmania admin commands
-      default: op
-      children:
-        salesmania.admin.reload: true
-        salesmania.auction.cancel: true
-        salesmania.auction.end: true
-        salesmania.auction.enable: true
-        salesmania.auction.disable: true
     
+permissions:
+  salesmania.*:
+    description: Access to all salesmania commands
+    default: op
+    children:
+      salesmania.auction.*: true
+      salesmania.admin.*: true   
+  salesmania.auction.*:
+    description: Access to all salesmania auction commands
+    default: op
+    children:
+      salesmania.auction: true
+      salesmania.auction.start: true
+      salesmania.auction.bid: true
+  salesmania.admin.*:
+    description: Provides access salesmania admin commands
+    default: op
+    children:
+      salesmania.admin: true
+      salesmania.admin.reload: true
+      salesmania.auction.cancel: true
+      salesmania.auction.end: true
+      salesmania.auction.enable: true
+      salesmania.auction.disable: true
+  
