--- a/resources/english.yml
+++ b/resources/english.yml
@@ -1,5 +1,5 @@
 ï»¿Permission:
-  noPermission: "§cYou don't have permission to %s"
+  noPermission: "Â§cYou don't have permission to %s"
   
   Auction:
     start: "start an auction"
@@ -13,8 +13,8 @@ Misc:
 
 Locale:
   available: "Available locales: %s"
-  changed: "§aYour locale has been changed to %s"
-  notFound: "§cNo locale '%s' available"
+  changed: "Â§aYour locale has been changed to %s"
+  notFound: "Â§cNo locale '%s' available"
 
 Syntax:
   Auction:
@@ -33,53 +33,53 @@ Syntax:
     - "/salesmania reload"
     
 Auction:
-  tag: "§2[Auction] §f"
-  ignoring: "§cYou are now ignoring all auction messages."
-  notIgnoring: "§aYou are no longer ignoring auction messages."
-  alreadyStarted: "§cThere is already an auction running."
-  cooldown: "§cAuction is in a cooldown period."
-  time: "§c%d seconds remaining in auction."
-  bidRaised: "§aBid raised to §2$%,.2f§a by §3%s"
-  canceled: "§cAuction canceled."
-  startOverMax: "§cThe starting bid can't be over $%,.2f"
-  startUnderMin: "§cThe starting bid must be atleast $%,.2f"
+  tag: "Â§2[Auction] Â§f"
+  ignoring: "Â§cYou are now ignoring all auction messages."
+  notIgnoring: "Â§aYou are no longer ignoring auction messages."
+  alreadyStarted: "Â§cThere is already an auction running."
+  cooldown: "Â§cAuction is in a cooldown period."
+  time: "Â§c%d seconds remaining in auction."
+  bidRaised: "Â§aBid raised to Â§2$%,.2fÂ§a by Â§3%s"
+  canceled: "Â§cAuction canceled."
+  startOverMax: "Â§cThe starting bid can't be over $%,.2f"
+  startUnderMin: "Â§cThe starting bid must be atleast $%,.2f"
   timeRemaining: "%d seconds remaining."
-  notRunning: "§cThere is no auction running"
-  noBids: "§cAuction ended with no bids."
+  notRunning: "Â§cThere is no auction running"
+  noBids: "Â§cAuction ended with no bids."
   
-  enabled: "§aThe auction has been enabled."
-  disabled: "§cThe auction has been disabled."
-  alreadyEnabled: "§cThe auction is already enabled."
-  alreadyDisabled: "§cThe auction is already disabled."
+  enabled: "Â§aThe auction has been enabled."
+  disabled: "Â§cThe auction has been disabled."
+  alreadyEnabled: "Â§cThe auction is already enabled."
+  alreadyDisabled: "Â§cThe auction is already disabled."
   
   
   startInfo:
-  - "§3%owner%§f has put §a%quantity% %item%§f up for auction."
-  - "§aDurability: §6%durability%"
+  - "Â§3%owner%Â§f has put Â§a%quantity% %item%Â§f up for auction."
+  - "Â§aDurability: Â§6%durability%"
   - "%enchantinfo%"
-  - "§aStarting Bid: §2$%bid%"
+  - "Â§aStarting Bid: Â§2$%bid%"
   
-  enchant: "§aEnchant: §f"
-  enchantInfo: "§e%enchant%§f(§6%enchantlvl%§f) "
+  enchant: "Â§aEnchant: Â§f"
+  enchantInfo: "Â§e%enchant%Â§f(Â§6%enchantlvl%Â§f) "
   
   info:
-  - "§aItem: %quantity% %item%"
-  - "§aDurability: §6%durability%"
+  - "Â§aItem: %quantity% %item%"
+  - "Â§aDurability: Â§6%durability%"
   - "%enchantinfo%"
-  - "§aOwner: §3%owner%"
-  - "§aWinner: §3%winner% §fat §2$%bid%"
+  - "Â§aOwner: Â§3%owner%"
+  - "Â§aWinner: Â§3%winner% Â§fat Â§2$%bid%"
   
   endInfo:
-  - "§aAuction Ended: %quantity% %item% sold for §2$%bid%"
+  - "Â§aAuction Ended: %quantity% %item% sold for Â§2$%bid%"
   
   Bidding:
-    bidSuccess: "§aYou've bid §2$%,.2f§a on %s"
-    bidFailure: "§cSomething went wrong while bidding."
-    overMax:  "§cYou can't bid over $%,.2f at this time"
-    underMin: "§cYou must bid at least $%,.2f"
-    outBid: "§cYou've been outbid by %s!"
-    playerWinning: "§cYou are already winning this auction."
-    playerOwner: "§cYou can't bid on your own auction."
+    bidSuccess: "Â§aYou've bid Â§2$%,.2fÂ§a on %s"
+    bidFailure: "Â§cSomething went wrong while bidding."
+    overMax:  "Â§cYou can't bid over $%,.2f at this time"
+    underMin: "Â§cYou must bid at least $%,.2f"
+    outBid: "Â§cYou've been outbid by %s!"
+    playerWinning: "Â§cYou are already winning this auction."
+    playerOwner: "Â§cYou can't bid on your own auction."
   
   Console:
     cantStartAuction: "Sorry, only players can start an auction."
