Fixed some issues regarding /salesmania locale syntax

--- a/resources/english.yml
+++ b/resources/english.yml
@@ -30,6 +30,7 @@ Syntax:
   Salesmania:
     salesmania:
     - "/salesmania locale set <locale>"
+    - "/salesmania locale list"
     - "/salesmania reload"
     
 Auction:
