--- a/resources/plugin.yml
+++ b/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Salesmania
-version: 1.0RC1
+version: 1.0b4
 description: Plugin for handling player auctions.
 author: Justin
 authors: [Khaos_Fury]
